src/components-CSS/HeaderCSS.css
/* Codice sconto */
.codice-sconto {
  text-align: center;
  padding: 10px;
  background-color: black;
  color: white;
  width: 100%;
}

/* Header */
.header-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 15px;
  background-color: transparent;
  position: sticky;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 1000;
  background-color: white;
}

.header-container:hover {
  background: linear-gradient(to right, #b8a99c, #e0d7cf);
}

/* Navbar */

.logo a {
  padding-left: 10px;
  text-decoration: none;
  color: black;
  font-size: 25px;
  font-weight: bold;
  letter-spacing: 1px;
  display: inline-block;
  transition: transform 0.3s ease-in-out, color 0.3s ease-in-out;
}

.logo a:hover {
  transform: scale(1.2);
  color: rgba(114, 42, 15, 0.925);
}


.nav {
  display: flex;
  gap: 40px;
}

.nav a {
  text-decoration: none;
  color: black;
  font-size: 15px;
  transition: transform 0.3s ease-in-out, color 0.3s ease-in-out;
}

.nav a:hover {
  color: rgba(153, 52, 15, 0.925);
  transform: scale(1.2);
}

.search-user-cart {
  display: flex;
  gap: 15px;
}

/* Bottone di ricerca */

.search-bar {
  background: black;
  height: 40px;
  border-radius: 40px;
  padding: 10px;
  position: absolute;
  right: 40px;
  bottom: 10px;
}

.search-bar input {
  border: none;
  background: none;
  outline: none;
  color: white;
  width: 0px;
  transition: 0.4s;
}

.search-bar:hover>input {
  width: 200px;
  padding: 0 6px;
}

.search-bar a {
  float: right;
  color: white;
}

.search-bar a:hover {
  color: rgba(153, 52, 15, 0.925);
}

.search-user-cart a {
  font-size: 18px;
  cursor: pointer;
  /* color: black; */
  transition: color 0.3s;
  transition: transform 0.3s ease-in-out, color 0.3s ease-in-out;
}

.search-user-cart a:hover {
  color: rgba(153, 52, 15, 0.925);
  transform: scale(1.2);
}

/* .search-bar {
  width: 200px;
  position: relative;
}

.search-bar input {
  width: 100%;
  padding: 10px;
  border: 1px solid rgba(3, 3, 3, 0.5);
  border-radius: 20px;
  background: rgba(207, 207, 207, 0.5);
  color: rgb(0, 0, 0);
  outline: none;
  transition: all 0.3s;
}

.search-bar input::placeholder {
  color: rgba(0, 0, 0, 0.7);
}

.search-bar input:focus {
  background: rgba(153, 153, 153, 0.3);
  border: 1px solid white;
} */

/* .search-bar input{
  padding: 3px;
  border-radius: 6px;
 } */

/* .search-bar{
  display: flex;
 } */

.active {
  border-bottom: 2px solid black;
}

